<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <!-- TODO: Dar formato al item para que se vea titulo, descripción y estado dentro de un MaterialCard -->
    <!-- TODO: Añadir Botón de detalle -->
    <!-- TODO: Añadir botón de compartir -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/todo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/todoSw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/switch_txt" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/boton_compartir"
                app:icon="@drawable/shared_icon"/>

            <Button
                android:id="@+id/edit"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_editar"
                app:icon="@drawable/edit_icon"
                 />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>